objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Agency_of_Record__c</fullName>
        <description>Marketing agency that is working with Purina on this marketing initiative.</description>
        <label>Agency of Record</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>McCord</fullName>
                </value>
                <value>
                    <fullName>Filament</fullName>
                </value>
                <value>
                    <fullName>Colle + McVoy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allow_13to17__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A standard age gate of 18 or older exists for collecting user information.  If this event involves minors and you wish to allow them to participate, check this box.</description>
        <label>Allow 13 - 17 Year Olds to Participate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associated_Dealer_18_Digit_ID__c</fullName>
        <formula>Associated_Dealer__r.X18_Digit_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associated Dealer 18 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Dealer_Account_Number__c</fullName>
        <formula>Associated_Dealer__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associated Dealer Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Dealer_Mapping_Zip__c</fullName>
        <formula>Associated_Dealer__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associated Dealer Mapping Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Accounts that are Dealer-Coop Records.</description>
        <label>Associated Dealer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Account selected is not a Dealer-Coop Account.</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>contains</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Events</relationshipLabel>
        <relationshipName>Customer_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attended_Count__c</fullName>
        <description>Rolls up the number of campaign members where the member status is &quot;Attended&quot;.</description>
        <inlineHelpText>Counts the number of campaign members where the status is &quot;Attended&quot;</inlineHelpText>
        <label>Attended Count</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Attended</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Brochure_Content__c</fullName>
        <description>Content to be used in the Dealer Community</description>
        <label>Brochure Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Call_To_Action_Button_Text__c</fullName>
        <description>Will hold the button label.</description>
        <label>Call To Action Button Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_To_Action_URL__c</fullName>
        <label>Call To Action URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Canceled_Count__c</fullName>
        <description>Rolls up the number of campaign members where the member status is &quot;Canceled&quot; or &quot;Sent&quot;. The &quot;sent&quot; status is included because the FARM custom code does not update the campaign member status to &quot;Canceled&quot;.</description>
        <inlineHelpText>Counts the number of campaign members where the status is &quot;Canceled&quot;</inlineHelpText>
        <label>Canceled Count</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Canceled, Sent</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Confirm_Laptop_Zip_Code__c</fullName>
        <formula>&quot;http://bit.ly/1OlmuF2&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirm Laptop Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Curr_Year_Ind_Date_of_Event__c</fullName>
        <formula>if(Text(Year( Date_of_Event__c )) = text(Year(today())),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Curr Year Ind (Date of Event)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Week_Indicator_Date_of_Event__c</fullName>
        <formula>if(and( 
Date_of_Event__c &gt;=  First_Day_of_Current_Week__c  , 
Date_of_Event__c &lt;=  Last_Day_of_Current_Week__c ) ,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Week Indicator (Date of Event)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Week_Indicator_End_Date__c</fullName>
        <formula>if(and( 
EndDate &gt;=  First_Day_of_Current_Week__c  , 
EndDate &lt;=  Last_Day_of_Current_Week__c ),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Week Indicator (End Date)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Event_Count__c</fullName>
        <formula>if(isblank( Id ),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Event Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Range__c</fullName>
        <description>Date Range for the Promotion</description>
        <formula>CASE(MONTH( Promotion_Start_Date__c ),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot;None&quot;)&amp;&quot; &quot;&amp;TEXT(DAY(Promotion_Start_Date__c))&amp;&quot; - &quot;&amp; CASE(MONTH( Promotion_End_Date__c ),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot;None&quot;)&amp;&quot; &quot;&amp;TEXT(DAY(Promotion_End_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Event_Indicator__c</fullName>
        <formula>if(

and(Date_of_Event__c  &lt;= Today()+1,
EndDate &gt;= TODAY () -1),&quot;Yes&quot;,

if(
and(Date_of_Event__c  &lt;= Today()+2,
EndDate &gt;= TODAY() -1),&quot;Yes&quot;,

if(
and(Date_of_Event__c  = Today(),
EndDate = TODAY()),&quot;Yes&quot;,

if(
and(Date_of_Event__c  = Today() +1,
EndDate = TODAY() +1),&quot;Yes&quot;,

&quot;No&quot;


))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Event Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Event_Name__c</fullName>
        <formula>text(Date_of_Event__c) &amp; &quot; &quot; &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Event || Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Event__c</fullName>
        <description>Date the event will be held</description>
        <inlineHelpText>Farm VIP Event: Date of the VIP Event
Customer Event: Date of the National, Regional, or Local Event
Engagement Campaign: Start date of the campaign</inlineHelpText>
        <label>Date of Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Determines_whether_the_email_sends_the_w__c</fullName>
        <description>Determines whether the email sends the week before the event.</description>
        <label>Determines whether the email sends the w</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Digigraph_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Digigraph API Calls</description>
        <label>Digigraph Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <description>Display Order</description>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_in_Dealer_Community__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Customer Event should display in the Dealer Community</description>
        <inlineHelpText>If checked, this Customer Event will display in the Dealer Community</inlineHelpText>
        <label>Display in Dealer Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distribution_Strategy__c</fullName>
        <description>Area to include information on distribution strategy for campaign</description>
        <label>Distribution Strategy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date_Range__c</fullName>
        <description>Date Ranges for Farm VIP Events</description>
        <formula>CASE(MONTH(Date_of_Event__c), 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
12, &quot;Dec&quot;, 
&quot;None&quot;)&amp; &quot; &quot;&amp;TEXT(DAY(Date_of_Event__c)) &amp; ( IF(Date_of_Event__c = EndDate, &quot;&quot;, &quot; - &quot;&amp; CASE(MONTH(EndDate), 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
12, &quot;Dec&quot;, 
&quot;None&quot;)&amp;&quot; &quot;&amp;TEXT(DAY(EndDate)) ) )</formula>
        <label>Event Date Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_ID__c</fullName>
        <description>Salesforce Case-safe 18 Digit ID</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_ID_number__c</fullName>
        <inlineHelpText>Enter Dr. Mike Event ID if applicable</inlineHelpText>
        <label>Event ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <description>City and State the event will be held</description>
        <inlineHelpText>Enter the City and State the event will be held. **Example: Shoreview, MN**</inlineHelpText>
        <label>Event City, State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Objective__c</fullName>
        <description>Area to include the primary objective of the event</description>
        <label>Event Objective</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_SubCategory__c</fullName>
        <description>Sub Category based on the Category for the Event</description>
        <label>Event SubCategory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chick Days</fullName>
                </value>
                <value>
                    <fullName>Mega Calf &amp; Heifer VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Zip__c</fullName>
        <description>Event&apos;s 7 digit zip code</description>
        <inlineHelpText>Indicate the Event&apos;s 7-digit zip code.</inlineHelpText>
        <label>Event Zip</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalVisibilityEndDate__c</fullName>
        <description>End Date where the record will be visible to External users. Such as Dealer Community Users.</description>
        <inlineHelpText>End Date where the record will be visible to External users. Such as Dealer Community Users.</inlineHelpText>
        <label>External Visibility End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalVisibilityStartDate__c</fullName>
        <description>Start Date where the record will be visible to External users. Such as Dealer Community Users.</description>
        <inlineHelpText>Start Date where the record will be visible to External users. Such as Dealer Community Users.</inlineHelpText>
        <label>External Visibility Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FARM_VIP_Newsletter_Null__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lthe FARM VIP Newsletter information has been loaded into Salesforce.com for Contacts.</description>
        <label>Farm VIP Newsletter Load || Null</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Farm_VIP_Newsletter_Load_Not_Null__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates if the FARM VIP Newsletter information has been loaded into Salesforce.com for Contacts.</description>
        <label>Farm VIP Newsletter Load || Not Null</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Day_2_Weeks_Ago__c</fullName>
        <formula>(TODAY()- 7) - 
CASE( 
MOD((TODAY()-7) - DATE( 1900, 1, 7 ), 7 ), 
0,7, 
1,8, 
2,9, 
3,10, 
4,11, 
5,12, 
13)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Day 2 Weeks Ago</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Day_of_Current_Week__c</fullName>
        <formula>(TODAY()+7) - 
CASE( 
MOD(TODAY() - DATE( 1900, 1, 7 ), 7 ), 
0,7, 
1,8, 
2,9, 
3,10, 
4,11, 
5,12, 
13)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Day of Current Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Day_of_Last_Week__c</fullName>
        <formula>TODAY() - 
CASE( 
MOD(TODAY() - DATE( 1900, 1, 7 ), 7 ), 
0,7, 
1,8, 
2,9, 
3,10, 
4,11, 
5,12, 
13)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Day of Last Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Have_Booth__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator if event will have a booth</description>
        <label>Have Booth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <description>Image used for the Event Sub Category</description>
        <formula>IF(
ISPICKVAL(Event_SubCategory__c,&apos;ChickDays&apos;),
IMAGE(&apos;/resource/1475473908000/LPDCR_Assets/img/chickdays.jpg&apos;,&quot; &quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsEventCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Event Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Laptop_Digigraph_Web_Address__c</fullName>
        <formula>&quot;http://bit.ly/20xcM8r&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Laptop - Digigraph Web Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Day_2_Weeks_Ago__c</fullName>
        <formula>(TODAY()- 7 ) - 
CASE( 
MOD((TODAY()-7) - DATE( 1900, 1, 7 ), 7 ), 
0,1, 
1,2, 
2,3, 
3,4, 
4,5, 
5,6, 
7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Day 2 Weeks Ago</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Day_of_Current_Week__c</fullName>
        <formula>(TODAY()+ 7 ) - 
CASE( 
MOD((TODAY()-7) - DATE( 1900, 1, 7 ), 7 ), 
0,1, 
1,2, 
2,3, 
3,4, 
4,5, 
5,6, 
7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Day of Current Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Day_of_Last_Week__c</fullName>
        <formula>TODAY() - 
CASE( 
MOD((TODAY()-7) - DATE( 1900, 1, 7 ), 7 ), 
0,1, 
1,2, 
2,3, 
3,4, 
4,5, 
5,6, 
7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Day of Last Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date_Time__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Updated Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Maximum_Registrants__c</fullName>
        <description>Maximum number of registrants allowed for event</description>
        <label>Maximum Registrants</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Registrants__c</fullName>
        <description>Minimum number of registrants allowed for event</description>
        <label>Minimum Registrants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_Date__c</fullName>
        <formula>Name &amp; &quot; &quot; &amp; Text(Date_of_Event__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name &amp; Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newsletter_Not_Null__c</fullName>
        <formula>HYPERLINK(&quot;00Oj0000000PVGi?pv0=&quot;&amp; X18_Digit_Customer_Event_ID__c ,&quot;Newsletter Not Null || &quot; &amp;Name,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Newsletter || Not Null</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newsletter_Null__c</fullName>
        <formula>HYPERLINK(&quot;00Oj0000000PVDF?pv0=&quot;&amp; X18_Digit_Customer_Event_ID__c ,&quot;Newsletter Null || &quot; &amp;Name,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Newsletter || Null</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Show_Count__c</fullName>
        <description>Rolls up the number of campaign members where the member status is &quot;No Show&quot;.</description>
        <inlineHelpText>Counts the number of campaign members where the status is &quot;No Show&quot;</inlineHelpText>
        <label>No Show Count</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>No Show</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <description>Total Number of expected attendees for event</description>
        <label>Number of Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_s_Email_Address__c</fullName>
        <formula>Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner&apos;s Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_s_Profile__c</fullName>
        <description>Record owner&apos;s profile</description>
        <formula>Owner.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner&apos;s Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_s_Role__c</fullName>
        <description>The record owner&apos;s role.</description>
        <formula>Owner.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner&apos;s Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_s_Sales_Division__c</fullName>
        <formula>text(Owner.Sales_Division__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner&apos;s Sales Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_s_Sales_Region__c</fullName>
        <formula>text(Owner.Sales_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner&apos;s Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Digigraph_Web_Address__c</fullName>
        <formula>&quot;http://bit.ly/1PLVIGQ&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone - Digigraph Web Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Book_Date_Range__c</fullName>
        <description>Date Range for the Pre-Book Promotion based on the Start Date and End Date</description>
        <formula>CASE(MONTH( Pre_Book_Start_Date__c ), 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
12, &quot;Dec&quot;, 
&quot;None&quot;)&amp;&quot; &quot;&amp;TEXT(DAY(Pre_Book_Start_Date__c))&amp;&quot; - &quot;&amp; CASE(MONTH( Pre_Book_End_Date__c ), 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
12, &quot;Dec&quot;, 
&quot;None&quot;)&amp;&quot; &quot;&amp;TEXT(DAY(Pre_Book_End_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre-Book Date Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Book_Discount_Code__c</fullName>
        <description>Promotions (non-product)</description>
        <label>Pre-Book Discount Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Book_End_Date__c</fullName>
        <description>Promotions (non-product)</description>
        <label>Pre-Book End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Book_Start_Date__c</fullName>
        <description>Promotions (non-product)</description>
        <label>Pre-Book Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promotion_Description__c</fullName>
        <description>Promotion (non-product)</description>
        <label>Promotion Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Promotion_Discount_Code__c</fullName>
        <label>Promotion Discount Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_End_Date__c</fullName>
        <description>Promotions (non-product)</description>
        <label>Promotion End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promotion_Start_Date__c</fullName>
        <description>Promotion related (non-product)</description>
        <label>Promotion Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region_Picklist__c</fullName>
        <description>Picklist for Event Region</description>
        <label>Event Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Southern</fullName>
                </value>
                <value>
                    <fullName>Upper Midwest</fullName>
                </value>
                <value>
                    <fullName>CBD</fullName>
                </value>
                <value>
                    <fullName>Feed</fullName>
                </value>
                <value>
                    <fullName>Dealer Business Dev</fullName>
                </value>
                <value>
                    <fullName>National Retail Exotics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region field will be filled in on the Customer Event if it is a Local Customer Event based on the users Sales Region</description>
        <label>Region (Owner)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Based_on_Max_Capacity__c</fullName>
        <description>The total campaign members with the status of &quot;Registered&quot; divided by the maximum registrants.</description>
        <formula>If(Registered_Count__c =0,0,Registered_Count__c / Maximum_Registrants__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Registered Based on Max Capacity</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Registered_Count__c</fullName>
        <description>Rolls up the number of campaign members where the member status is &quot;Registered&quot;.</description>
        <inlineHelpText>Counts the number of campaign members where the status is &quot;registered&quot;</inlineHelpText>
        <label>Registered Count</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Registered</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Registration_Closes__c</fullName>
        <description>The date the event closes for accepting new nomination requests.</description>
        <formula>Date_of_Event__c - 14</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Closes</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Opens__c</fullName>
        <description>Date registration opens for event.  This field is populated via the process builder then the record is created.  The Registration Opens is populated with this:  [Campaign].Date_of_Event__c - 90</description>
        <label>Registration Opens</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rollup_Annual_Points__c</fullName>
        <description>Rollup summary of annual points that have been rolled up from all opportunities related to this campaign, and for all children&apos;s campaigns annual points.</description>
        <label>Rollup Annual Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollup_Annual_Tons__c</fullName>
        <description>Rollup summary of annual tons that have been rolled up from all opportunities related to this campaign, and for all children&apos;s campaigns annual tons.</description>
        <label>Rollup Annual Tons</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollup_Won_Points__c</fullName>
        <description>total points rolled up from all child opportunities that have a status of closed won.</description>
        <label>Rollup Won Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollup_Won_Tons__c</fullName>
        <description>total tons rolled up from all child opportunities that have a status of closed won.</description>
        <label>Rollup Won Tons</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Area_Indicator__c</fullName>
        <formula>If(text( $User.Sales_Division__c) =  Owner_s_Sales_Division__c , &quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Area Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Division_Indicator__c</fullName>
        <formula>If(
 Text(Owner.Sales_Division__c) =  Text($User.Sales_Division__c) ,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Division Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Pre_Event_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator whether or not to sent pre-event email</description>
        <label>Send Pre-Event Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Registration_Confirmation_Email__c</fullName>
        <description>Determines whether the Registration Confirmation email sends.</description>
        <label>Send Registration Confirmation Email</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Thank_You_for_Attending_Email__c</fullName>
        <description>Determines whether to send a &quot;Thank You for Attending&quot; Email.</description>
        <label>Send Thank You for Attending Email</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Week_Before_Event_Email__c</fullName>
        <description>Determines whether the email sends the week before the event.</description>
        <label>Send Week Before Event Email</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>Description of the Farm VIP Event that will display in the Customer Community</description>
        <inlineHelpText>Description of the Farm VIP Event that will display in the Customer Community</inlineHelpText>
        <label>Dealer Facing Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Show_in_Digigraph_Offline__c</fullName>
        <formula>If(
RecordType.Name = &quot;Customer Events&quot;  &amp;&amp;  text(Sub_type__c)  &lt;&gt; &quot;Horse 60 Day Trial&quot; || RecordType.Name = &quot;National/Regional Events&quot;,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show in Digigraph Offline</label>
        <type>Text</type>
    </fields>
</CustomObject>